[Mac] Really make sure browser tests do not use a bundled child process executable.

The change in 9b17197032ef7830e6002d4c8e8e7ae3b7390eb5 [formerly be983c8b8d2f58b9a70d9407feea02b5aba823c5] was incomplete
because calls into SetUpBundleOverrides() would re-override the
CHILD_PROCESS_EXE path. This moves the SetUpBundleOverrides() into ChromeMain
rather than in various delegate methods, so that it is not called in tests.

This requires allowing the crashpad_handler to be started from the Framework
that is not bundled in a .app, so the rpath is adjusted in the component build.

Finally this enables network service browser_tests, which were previously
disabled on Mac, to verify the fix.

Bug: 877992
Test: browser_tests --gtest_filter=*NetworkContextConfigurationBrowserTest*
Change-Id: If88a8dd13b9b7b0500d08a180658597ae6f5997d
Reviewed-on: https://chromium-review.googlesource.com/1198306
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588516}
Former-commit-id: 81ea450944274c8574d4c3ee6c6adca9624e8a83