chrome/browser/net/network_context_configuration_browsertest.cc
@@ -894,12 +894,6 @@ IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationBrowserTest, DiskCache) {
   }
 }
 
-// Test certs cannot currently be installed on OSX with the network service
-// enabled.
-// TODO(mmenke): Once that is fixed, enable this test on OSX.
-// See https://crbug.com/757088
-#if !defined(OS_MACOSX)
-
 // Visits a URL with an HSTS header, and makes sure it is respected.
 IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationBrowserTest, PRE_Hsts) {
   net::test_server::EmbeddedTestServer ssl_server(
@@ -1017,8 +1011,6 @@ IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationBrowserTest, Hsts) {
   }
 }
 
-#endif  // !defined(OS_MACOSX)
-
 // Check that the SSLConfig is hooked up. PRE_SSLConfig checks that changing
 // local_state() after start modifies the SSLConfig, SSLConfig makes sure the
 // (now modified) initial value of local_state() is respected.
@@ -1043,19 +1035,8 @@ IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationBrowserTest, PRE_SSLConfig) {
   simple_loader->DownloadToStringOfUnboundedSizeUntilCrashAndDie(
       loader_factory(), simple_loader_helper.GetCallback());
   simple_loader_helper.WaitForCallback();
-#if defined(OS_MACOSX)
-  // TODO(https://crbug.com/757088):  Test certs don't work on OSX, with the
-  // network service.
-  if (GetParam().network_service_state != NetworkServiceState::kDisabled) {
-    EXPECT_FALSE(simple_loader_helper.response_body());
-  } else {
-    ASSERT_TRUE(simple_loader_helper.response_body());
-    EXPECT_EQ(*simple_loader_helper.response_body(), "Echo");
-  }
-#else
   ASSERT_TRUE(simple_loader_helper.response_body());
   EXPECT_EQ(*simple_loader_helper.response_body(), "Echo");
-#endif
 
   // Disallow TLS 1.0 via prefs.
   g_browser_process->local_state()->SetString(prefs::kSSLVersionMin,
@@ -1523,15 +1504,6 @@ class NetworkContextConfigurationFilePacBrowserTest
 IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationFilePacBrowserTest, FilePac) {
   bool network_service_disabled =
       !base::FeatureList::IsEnabled(network::features::kNetworkService);
-#if defined(OS_MACOSX)
-  // https://crbug.com/843324: the NetworkServiceTestHelper does not work on Mac
-  // so the TestHostResolver is not used to resolve the host name when the
-  // network service is enabled. The system host resolver is used instead
-  // and goed to the network, which we don't want in tests. (and it does not
-  // return the expected net::ERR_NOT_IMPLEMENTED).
-  if (!network_service_disabled)
-    return;
-#endif
   // PAC file URLs are not supported with the network service
   TestProxyConfigured(/*expect_success=*/network_service_disabled);
 }
@@ -1712,56 +1684,6 @@ IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationHttpsStrippingPacBrowserTest,
   EXPECT_EQ(net::ERR_PROXY_CONNECTION_FAILED, simple_loader->NetError());
 }
 
-// |NetworkServiceTestHelper| doesn't work on browser_tests on OSX.
-// See https://crbug.com/843324
-#if defined(OS_MACOSX)
-
-#if BUILDFLAG(ENABLE_EXTENSIONS)
-#define INSTANTIATE_EXTENSION_TESTS(TestFixture)                          \
-  INSTANTIATE_TEST_CASE_P(                                                \
-      OnDiskApp, TestFixture,                                             \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,         \
-                                  NetworkContextType::kOnDiskApp})));     \
-                                                                          \
-  INSTANTIATE_TEST_CASE_P(                                                \
-      InMemoryApp, TestFixture,                                           \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,         \
-                                  NetworkContextType::kInMemoryApp})));   \
-                                                                          \
-  INSTANTIATE_TEST_CASE_P(                                                \
-      OnDiskAppWithIncognitoProfile, TestFixture,                         \
-      ::testing::Values(                                                  \
-          TestCase({NetworkServiceState::kDisabled,                       \
-                    NetworkContextType::kOnDiskAppWithIncognitoProfile})));
-#else  // !BUILDFLAG(ENABLE_EXTENSIONS)
-#define INSTANTIATE_EXTENSION_TESTS(TestFixture)
-#endif  // !BUILDFLAG(ENABLE_EXTENSIONS)
-
-// Instantiates tests with a prefix indicating which NetworkContext is being
-// tested, and a suffix of "/0" if the network service is disabled and "/1" if
-// it's enabled.
-#define INSTANTIATE_TEST_CASES_FOR_TEST_FIXTURE(TestFixture)               \
-  INSTANTIATE_EXTENSION_TESTS(TestFixture)                                 \
-  INSTANTIATE_TEST_CASE_P(                                                 \
-      SystemNetworkContext, TestFixture,                                   \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,          \
-                                  NetworkContextType::kSystem})));         \
-                                                                           \
-  INSTANTIATE_TEST_CASE_P(                                                 \
-      SafeBrowsingNetworkContext, TestFixture,                             \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,          \
-                                  NetworkContextType::kSystem})));         \
-                                                                           \
-  INSTANTIATE_TEST_CASE_P(                                                 \
-      ProfileMainNetworkContext, TestFixture,                              \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,          \
-                                  NetworkContextType::kProfile})));        \
-                                                                           \
-  INSTANTIATE_TEST_CASE_P(                                                 \
-      IncognitoProfileMainNetworkContext, TestFixture,                     \
-      ::testing::Values(TestCase({NetworkServiceState::kDisabled,          \
-                                  NetworkContextType::kIncognitoProfile})))
-#else  // !defined(OS_MACOSX)
 // Instiates tests with a prefix indicating which NetworkContext is being
 // tested, and a suffix of "/0" if the network service is disabled, "/1" if it's
 // enabled, and "/2" if it's enabled and restarted.
@@ -1836,8 +1758,6 @@ IN_PROC_BROWSER_TEST_P(NetworkContextConfigurationHttpsStrippingPacBrowserTest,
                                   NetworkContextType::kIncognitoProfile}), \
                         TestCase({NetworkServiceState::kRestarted,         \
                                   NetworkContextType::kIncognitoProfile})));
-
-#endif  // !defined(OS_MACOSX)
 
 INSTANTIATE_TEST_CASES_FOR_TEST_FIXTURE(NetworkContextConfigurationBrowserTest);
 INSTANTIATE_TEST_CASES_FOR_TEST_FIXTURE(
